# node-mapnik

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .npmignore  .npmrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  NEWS  README.md  appveyor.yml  binding.gyp  bootstrap.sh  build.gyp  build_node.bat  common.gypi  configure  demo.js  enable-local-dumps.reg  gen_settings.py  index.html  index.js  install_mason.sh  mapnik-config.bat  mapnik_settings.js  mapnik_settings.js.in  package-lock.json  package.json  test.js  vcbuild.bat  vcpkg.json  wscript  yuidoc.json
.github/workflows/: npm-publish-github-packages.yml  npm-test.yml
apps/tile/: app.js  run.sh
apps/tile/client/: map.js  polymaps.html
apps/tile/server/: app.js  settings.js  style.xml
bench/: boundary.pbf
bench/error/: test_vt_abort.js  test_vt_abort2.js
cmake/: post_build.cmake
docs/: Contributing.md  FAQ.md  Feature.md  Geometry.md  Image.md  Install.md  Logger.md  Map.md  Release.md  Using-Fonts.md  VectorTile.md
documentation/: config.json  index.html  index.json
documentation/3.4/: index.html
documentation/3.5/: index.html  index.json
documentation/3.5.0/: index.json
documentation/3.5.0/assets/: bass.css
documentation/3.5/assets/: mapnik.css
examples/: README.md  javascript_datasource.js  mapserver.js  render.js  simple.js  simple_express.js  simple_pool.js  stylesheet.xml  wms.js  wms_pool.js
examples/js_datasource/: osm_xapi.js  simple.js  usgs_quakes.js
examples/memory_datasource/: simple.js
examples/simple/: blank.js  render.js  simple.js  simple_express.js  simple_pool.js
examples/tile/: app.js  index.html  launch_nodes  map.js  sphericalmercator.js
examples/tile/database/: app.js  point_vector.xml
examples/tile/dynamic/: app.js  launch_nodes  nginx.conf
examples/tile/elastic/: README.md  app.js  create.sh  seed_es_index.js
examples/tile/lib/: map.js  utility.js
examples/tile/pool/: app.js
examples/tile/simple/: app.js
examples/tile/tilelive/: app.js
examples/utils/: pool.js  tile.js
examples/wms/: wms.js  wms_pool.js
gyp/.svn/: all-wcprops  entries
gyp/buildbot/.svn/: all-wcprops  entries
gyp/pylib/.svn/: all-wcprops  entries
gyp/samples/.svn/: all-wcprops  entries
gyp/test/.svn/: all-wcprops  entries
gyp/tools/.svn/: all-wcprops  entries
lib/: index.js  mapnik.js  pool.js  sphericalmercator.js
mapnik/: index.js  settings.js
scripts/: before-build.bat  build-appveyor.bat  build-local.bat  build_against_sdk.bat  build_against_sdk.sh  build_against_sdk_00-START-HERE.bat  build_against_sdk_01-download-deps.ps1  build_against_sdk_02-copy-deps-to-bindingdir.ps1  build_against_sdk_03-write-mapnik.settings.ps1  check_glibcxx.sh  clang-format.sh  clang-tidy.sh  clean.js  coverage.sh  create_scheme.sh  generate_compile_commands.py  install_deps.sh  is_pr_merge.sh  mapnik-config.sh  package_osx.sh  postinstall.sh  preinstall.sh  publish.sh  remove_node.bat  sanitize.sh  setup.sh  setup_cpp11_toolchain.sh  show_module_runtime.ps1  ubuntu_ppa_tests.sh
scripts/postgis/: initialize.sh  run.sh  setup.sh  setup_and_run.sh  stop.sh
src/: _mapnik.cc  blend.cpp  blend.hpp  callback_streambuf.hpp  ds_emitter.hpp  glibc_workaround.cpp  grid.h  js_grid_utils.hpp  json_emitter.hpp  json_proj_transform_grammar.cpp  layer_emitter.hpp  mapnik_.cpp  mapnik_.hpp  mapnik_cairo_surface.cpp  mapnik_cairo_surface.hpp  mapnik_color.cpp  mapnik_color.hpp  mapnik_datasource.cpp  mapnik_datasource.hpp  mapnik_expression.cpp  mapnik_expression.hpp  mapnik_feature.cpp  mapnik_feature.hpp  mapnik_featureset.cpp  mapnik_featureset.hpp  mapnik_fonts.hpp  mapnik_geometry.cpp  mapnik_geometry.hpp  mapnik_grid.cpp  mapnik_grid.hpp  mapnik_grid_view.cpp  mapnik_grid_view.hpp  mapnik_image.cpp  mapnik_image.hpp  mapnik_image_clear.cpp  mapnik_image_composite.cpp  mapnik_image_compositing.cpp  mapnik_image_copy.cpp  mapnik_image_encode.cpp  mapnik_image_encode.hpp  (+77 more)
src/grid/: grid.h  grid_buffer.h  renderer.cpp  renderer.h
src/libxml/: xmlversion.h
test/: batch_seed.test.js  blend.test.js  cairo_surface.test.js  color.test.js  compositing.test.js  constants.test.js  datasource.test.js  expression.test.js  feature.test.js  font_path.test.js  fonts.test.js  geometry.test.js  geotiff-load.test.js  grid.test.js  grid_view.test.js  image.filter.test.js  image.svg.meta.test.js  image.svg.test.js  image.test.js  image_view.test.js  layers.test.js  logger.test.js  map.test.js  map_generation.test.js  mapnik-index.test.js  mapnik-shapeindex.test.js  marker_cache.test.js  markers.xml  palette.test.js  parameters.test.js  plugin.test.js  proj_transform.test.js  projection.test.js  query-map.test.js  raster.xml  render-async.test.js  render-composite.js  render-sync.test.js  render_grid.test.js  request.test.js  (+12 more)
test/data/: block.json  large_overzoom.xml  map.xml  markers.xml  parse.error.json  postgis-create-db-and-tables.sql  postgis_datasource_tokens_query.xml  roads.xml  sat_map.xml  ünicode_symbols.xml  v4-10_131_242.vector.pbf  v6-0_0_0.mvt  world_merc.converted.geojson  ünicode_symbols.xml  你好_points.json  你好_points.sqlite
test/data/images/: 10x10.tiff  sat_image-expected-100x100-near.tif  sat_image-expected-100x100-offset.tif  sat_image-expected-50x50-multiple_offset.tif  sat_image-expected-50x50-near.tif  sat_image-expected-50x50-offset.tif  sat_image-expected-50x50-offset_wh.tif  sat_image.tif
test/data/render-composite/: composite-expected.json  composite.xml  data.xml
test/data/vector_tile/: 10.196.370.vector.pbf  12.771.1608.vector.pbf  13.1337.2825.vector.pbf  6-32-21.mvt  (+40 more)
test/support/: composites.xml  extra_arbitary_map_parameters.xml  grid2.json  grid__id__.json  grid__id__2.json  grid__id__3.json  grid_view.json  helper.js  simple_grid.json
tests/: color.test.js  constants.test.js  feature.test.js  image.test.js  layers.test.js  map_generation.test.js  palette.test.js  projection.test.js  render_grid.test.js
tests/support/: grid2.json  helper.js
tools/: cpp.el  fix_cpp_style.sh
(+503 files in other folders)
